--- a/config.cfg
+++ b/config.cfg
@@ -6,7 +6,7 @@ key_log_api :/api/post_keylogs/
 [Database]
 host: localhost
 username: root
-password: 
+password: 123456
 db_name: shield
 connect_attempt = 3
 
