--- a/config.cfg
+++ b/config.cfg
@@ -5,11 +5,11 @@ key_log_api :/api/post_keylogs/
 
 [Database]
 host: localhost
-username: root
-password: My$qlD0lph1n
-db_name: shield
-connect_attempt = 3
+username: 
+password: 
+db_name: 
+connect_attempt = 
 
 [Facebook]
-id: 1002147603256117
-secret: ef0265a34bc6a8bdc0fe439ff2cc490d
+id: 
+secret: 
